# gestion-academica-trazabilidad-multi-tenant

./: .gitignore  AGENTS.md  CHANGES.md  INSTRUCCIONES.md  docker-compose.yml  skills-lock.json
backend/: .coverage  .env  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  seed.py  seed_finanzas.py  seed_test.py  test_c14_alumno.py
backend/activia_trace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/alembic/: env.py
backend/alembic/versions/: 015_categoria_plus_fk.py  016_add_categoria_plus_activo.py  016_categoria_plus_fk.py  017_add_categoria_plus_activo.py  018_add_mensajeria_interna.py  b80b946af898_add_user_fields_and_asignaciones.py  b80b946af898_create_audit_log_table.py  b80b946af898_create_avisos_tables.py  (+12 more)
backend/app/: main.py
backend/tests/: conftest.py  helpers.py  test_app_startup.py  test_audit_log.py  test_auditoria.py  test_auth_2fa.py  test_auth_login.py  test_auth_logout.py  test_auth_recovery.py  test_auth_refresh.py  test_auth_security.py  test_avisos.py  test_base_repository.py  test_calificaciones.py  test_carreras.py  test_categorias_plus.py  test_cohortes.py  test_comunicaciones.py  test_config.py  test_database.py  test_encryption.py  test_encuentros.py  test_equipos_docentes.py  test_evaluaciones.py  test_exceptions.py  test_get_current_user.py  test_guardias.py  test_health.py  test_inbox.py  test_integration_comprehensive.py  test_integration_comprehensive_seeded.py  test_integration_seeded.py  test_liquidaciones_integration_seeded.py  test_liquidaciones_repositories.py  test_liquidaciones_services.py  test_materias.py  test_model_mixin.py  test_multi_tenant.py  test_padron.py  test_perfil.py  (+15 more)
(+635 files in other folders)
