[project]
name = "activia-trace"
version = "0.1.0"
description = "Plataforma de gestión académica y trazabilidad multi-tenant"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "sqlalchemy>=2.0.35,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",
    "argon2-cffi>=23.1.0,<24.0.0",
    "pyjwt>=2.8.0,<3.0.0",
    "passlib[argon2]>=1.7.4,<2.0.0",
    "pyotp>=2.9.0,<3.0.0",
    "opentelemetry-api>=1.27.0,<2.0.0",
    "opentelemetry-sdk>=1.27.0,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0,<1.0.0",
    "cryptography>=44.0.0,<45.0.0",
    "email-validator>=2.0.0,<3.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "python-multipart>=0.0.18,<1.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pytest-env>=1.1.0,<2.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["app"]
env = [
    "DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/test_trace",
    "SECRET_KEY=t3st-s3cr3t-k3y-4t-l34st-32-ch4rs!!",
    "ENCRYPTION_KEY=t3st-3ncrypt10n-k3y-x4ctly-32-ch",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N"]

[tool.ruff.format]
quote-style = "single"
